# WC2026-predictor

./: .gitignore  2026-06-21-football-match-predictor.md  CLAUDE.md  Football Match Outcome Predictor.md  README.md  pyproject.toml  requirements-render.txt  run_pipeline.py  vercel.json  wc2026_predictions.html
.claude/: launch.json
.claude/skills/edge-finder/: SKILL.md
.github/workflows/: refresh.yml
PDF/: _paper_text.txt
data/: wc2026_fixtures.csv
docs/: polymarket_value_tab_plan.md
notebooks/: 01_explore_clean.ipynb  02_fit_model.ipynb  03_backtest.ipynb
public/: index.html
reports/: backtest_results.json  backtest_results.txt  blend_sweep.txt  calibration.json  html_ui_feedback.md  model_variants.json  model_variants.txt
scripts/: backtest_compare.py  blend_sweep.py  calibration.py  combo_scan.py  edge_scan.py  finalize_model.py  live_edge.py  r32_scan.py  variant_backtest.py
src/footpred/: __init__.py  backtest.py  baselines.py  confederations.py  data.py  edge_board.py  fixtures.py  flags_svg.py  model.py  polymarket.py  predict.py  report.py  simulate.py
tests/: test_data.py  test_metrics.py
