[project]
name = "footpred"
version = "0.1.0"
description = "Bayesian hierarchical Poisson predictor for international football match outcomes (MCMC / PyMC)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pymc>=5.10",
    "arviz>=0.17",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
